# Compiladores

Back Up/Compila/: CMakeLists.txt  Lista-de-Tokens.docx  SymbolsTable.h  Token.h  Util.h  exemplo.l  main.cpp
Back Up/Compila final/: teste.txt
Back Up/Compila final/Compila/: Lexer.h  Syntax.h  exemplo.l
Back Up/Compila2/: Def.h  Lexer.h  Syntax.h  main.cpp
Compila/: Lexer.h  Syntax.h  exemplo.l  main.cpp  teste.cpp
Compiladores/Compila/: Syntax.h
Compiladores/Compila/back/: Lexer1.h
